--- a/.easignore
+++ b/.easignore
@@ -19,6 +19,10 @@ build/
 web-build/
 coverage/
 
+# Gradle and binary folders
+.gradle/
+**/bin/
+
 # Android
 android/.gradle/
 android/.idea/
@@ -64,3 +68,5 @@ tmp/
 temp/
 .cache/
 .babel.cache/
+android/app/.cxx/
+**/.cxx/
