--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,25 @@
+# CareAI Environment Variables
+# Replace values with your own credentials before running the app
+
+# Supabase Configuration
 EXPO_PUBLIC_SUPABASE_URL=your_supabase_url
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# OpenAI Configuration
+EXPO_PUBLIC_OPENAI_API_KEY=your_openai_api_key
+EXPO_PUBLIC_OPENAI_MODEL=gpt-3.5-turbo
+EXPO_PUBLIC_OPENAI_MAX_TOKENS=150
+EXPO_PUBLIC_OPENAI_TEMPERATURE=0.7
+
+# Google API Configuration
+EXPO_PUBLIC_GOOGLE_API_KEY=your_google_api_key
+
+# Sentry Error Tracking
+SENTRY_DSN=your_sentry_dsn
+SENTRY_AUTH_TOKEN=your_sentry_auth_token
+SENTRY_ORG=your_sentry_org
+SENTRY_PROJECT=your_sentry_project
+
+# Set to 'development', 'staging', or 'production'
+NODE_ENV=development
