--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,37 @@
-# CareAI Environment Variables
-# Replace values with your own credentials before running the app
+# 🚀 CareAI Production Environment Configuration Template
+# Copy this file to .env and replace placeholder values with actual credentials
 
-# Supabase Configuration
-EXPO_PUBLIC_SUPABASE_URL=your_supabase_url
-EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# ✅ Supabase (Core DB + Auth) - REQUIRED FOR ALL MODULES
+EXPO_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
-# OpenAI Configuration
-EXPO_PUBLIC_OPENAI_API_KEY=your_openai_api_key
-EXPO_PUBLIC_OPENAI_MODEL=gpt-3.5-turbo
+# ✅ OpenAI (AI Chat) - REQUIRED FOR AI FEATURES
+EXPO_PUBLIC_OPENAI_API_KEY=sk-proj-your_openai_api_key_here
+EXPO_PUBLIC_OPENAI_MODEL=gpt-3.5-turbo-0125
 EXPO_PUBLIC_OPENAI_MAX_TOKENS=150
 EXPO_PUBLIC_OPENAI_TEMPERATURE=0.7
 
-# Google API Configuration
-EXPO_PUBLIC_GOOGLE_API_KEY=your_google_api_key
+# ✅ Push Notifications - REQUIRED FOR REMINDERS
+EXPO_ACCESS_TOKEN=your_expo_access_token_here
+RESEND_API_KEY=your_resend_api_key_here
+SENDGRID_API_KEY=your_sendgrid_api_key_here
 
-# Sentry Error Tracking
-SENTRY_DSN=your_sentry_dsn
-SENTRY_AUTH_TOKEN=your_sentry_auth_token
-SENTRY_ORG=your_sentry_org
-SENTRY_PROJECT=your_sentry_project
+# ✅ Google Services (Maps / Location) - REQUIRED FOR LOCATION FEATURES
+EXPO_PUBLIC_GOOGLE_API_KEY=your_google_api_key_here
 
-# Set to 'development', 'staging', or 'production'
-NODE_ENV=development
+# ⚙️ Environment Settings
+NODE_ENV=production
+
+# 🔶 Optional Services (Not Required for Core Functionality)
+SENTRY_DSN=your_sentry_dsn_here
+SENTRY_AUTH_TOKEN=your_sentry_auth_token_here
+SENTRY_ORG=your_sentry_organization_here
+SENTRY_PROJECT=your_sentry_project_here
+
+# 📋 Setup Instructions:
+# 1. Copy this file: cp .env.example .env
+# 2. Replace all placeholder values with your actual credentials
+# 3. Never commit the .env file to version control
+# 4. Ensure all REQUIRED services are configured for app to function
+# 5. Optional services can be configured later for enhanced functionality
