--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/stack": "^7.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.0",
     "expo-av": "~15.0.2",
     "expo-battery": "~9.0.2",
@@ -76,6 +77,7 @@
     "file-loader": "^6.2.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "metro-transform-plugins": "^0.76.0",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.1.3"
   },
