--- a/package.json
+++ b/package.json
@@ -1,90 +1,70 @@
 {
-  "name": "care-ai",
-  "main": "expo-router/entry",
+  "name": "care-ai-new",
   "version": "1.0.0",
-  "private": true,
+  "description": "A React Native + Expo app for elderly care and medication management",
+  "main": "index.js",
   "scripts": {
-    "dev": "NODE_OPTIONS=--max_old_space_size=4096 EXPO_NO_TELEMETRY=1 npx expo start --clear",
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest",
-    "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --maxWorkers=2",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/metro-runtime": "~4.0.1",
+    "@babel/runtime": "^7.27.6",
+    "@expo-google-fonts/inter": "^0.4.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.19",
-    "@react-navigation/stack": "^7.0.0",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@supabase/supabase-js": "^2.39.3",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
-    "expo": "~52.0.0",
-    "expo-av": "~15.0.2",
-    "expo-battery": "~9.0.2",
-    "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.15",
-    "expo-device": "~7.0.2",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-localization": "~16.0.1",
-    "expo-location": "~18.0.8",
-    "expo-notifications": "~0.27.8",
-    "expo-router": "~4.0.19",
-    "expo-sensors": "~14.0.2",
-    "expo-speech": "~13.0.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
-    "i18n-js": "^4.3.2",
-    "lucide-react-native": "^0.294.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "13.14.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "dotenv": "^16.4.1",
+    "expo": "~51.0.0",
+    "expo-av": "~14.0.6",
+    "expo-build-properties": "~0.12.3",
+    "expo-camera": "~15.0.14",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.20",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.1",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.10",
+    "expo-router": "~3.5.0",
+    "expo-secure-store": "~13.0.2",
+    "expo-sensors": "~13.0.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "react": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "file-loader": "^6.2.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "metro-transform-plugins": "^0.76.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "typescript": "^5.1.3"
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.2.4",
+    "react-native-svg-transformer": "^1.5.1"
   },
-  "overrides": {
-    "react-native-web": "~0.19.6"
-  },
-  "engines": {
-    "node": ">=16"
-  }
+  "private": true
 }
