✅ MERGE: Working remote configs that resolve Metro/Babel runtime issues - Updated Expo SDK 52, enhanced Metro config, improved Babel setup - App now builds and runs successfully in iOS simulator - All remote configs (Supabase, OpenAI, Google) properly loaded

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,19 +4,14 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    },
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules",
